test/files/pos/protected-static/J.java
package bippy;

public class J {
  protected static String f() {
    return "hi mom";
  }
}