test/files/neg/t1548/J.java
package javapkg;

public class J {

  String defaultMethod() {
    return "foo";
  }

  public String toString() {
    return "JavaClass: "+defaultMethod();
  }
}